--- a/roles/nvim/tasks/build.yaml
+++ b/roles/nvim/tasks/build.yaml
@@ -1,21 +1,21 @@
 ---
 - name: clean up artifacts from prior builds
   community.general.make:
-    chdir: "{{ neovim_build_path }}"
+    chdir: "{{ nvim_build_path }}"
     target: distclean
-    make: "{{ exe_make }}"
+    make: "{{ nvim_exe_make }}"
   tags:
     - molecule-idempotence-notest
 
 - name: build release target
   community.general.make:
-    chdir: "{{ neovim_build_path }}"
+    chdir: "{{ nvim_build_path }}"
     params:
       CMAKE_BUILD_TYPE: Release
-      CMAKE_INSTALL_PREFIX: "{{ install_path }}"
+      CMAKE_INSTALL_PREFIX: "{{ nvim_install_path }}"
       # USE_BUNDLED: "OFF"
     target: install
-    make: "{{ exe_make }}"
+    make: "{{ nvim_exe_make }}"
   tags:
     - molecule-idempotence-notest
 ...
