--- a/roles/nvim/tasks/redhat.yaml
+++ b/roles/nvim/tasks/redhat.yaml
@@ -1,6 +1,6 @@
 ---
 - name: "[install] requirements for ruby gem"
   ansible.builtin.package:
-    name: '{{ dnf }}'
+    name: '{{ nvim_dnf }}'
   become: true
   when: "'RedHat' in ansible_os_family"
